--- a/card/pages/hongbao/hongbao.wxss
+++ b/card/pages/hongbao/hongbao.wxss
@@ -1,1 +1,127 @@
 /* pages/hongbao/hongbao.wxss */
+.gray{
+    width: 100%;
+    background-color: #f5fafe;
+    padding: 0;
+    margin: 0;
+}
+.header{
+    width: 100%;
+     background-color: #f5fafe;
+     position: relative;
+}
+.circle{
+    width: 100%;
+    height: 150rpx;
+}
+.circle image{
+    width: 100%;
+    height: 150rpx;
+}
+.user_pic{
+    width: 130rpx;
+    height: 130rpx;
+    border-radius: 50%;
+    overflow: hidden;
+    position: absolute;
+    top: 85rpx;
+    left: 312rpx;
+}
+.user_pic image{
+    width: 130rpx;
+    height: 130rpx;
+}
+.inf{
+    width: 100%;
+    margin-top: 75rpx;
+    background-color: #f5fafe;
+    text-align: center;
+}
+.username{
+    font-size: 35rpx;
+    font-weight: normal;
+    line-height: 50rpx;
+}
+.con{
+    font-size: 35rpx;
+    font-weight: normal;
+    line-height: 50rpx;
+}
+.num{
+    font-size: 60rpx;
+    font-weight: 500;
+    line-height: 75rpx;
+}
+.num text{
+    font-size: 35rpx;
+    font-weight: normal;
+}
+.body{
+    display: flex;
+    width: 100%;
+    background-color: #f5fafe;
+    margin-top: 65rpx;
+    padding-bottom: 30rpx;
+}
+.fun1{
+   margin-left: 30rpx;
+   font-size: 30rpx;
+   color: #58AEFD;
+   font-weight: 545;
+}
+.fun2{
+    margin-left: 156rpx;
+    font-size: 30rpx;
+    color: #58AEFD;
+    font-weight: 545;
+}
+.fun3{
+    margin-left: 144rpx;
+    font-size: 30rpx;
+    color: #58AEFD;
+    font-weight: 545;
+}
+.numsum{
+    color: #999999;
+    margin-top: 20rpx;
+    padding-bottom: 20rpx;
+    border-bottom: 1rpx solid#999999;
+}
+.numsum text{
+    margin-left: 30rpx;
+}
+.rer1{
+    position: relative;
+    margin-bottom: 28rpx;
+    border-bottom: 1rpx solid#999999;
+}
+.rer2{
+    position: relative;
+    margin-bottom: 28rpx;
+}
+.rerName{
+    color: #999999;
+    margin-top: 26rpx;
+    margin-bottom: 20rpx;
+    margin-left: 30rpx;
+    font-size: 32rpx;
+}
+.rerTime{
+    padding-bottom: 28rpx;
+    margin-left: 30rpx;
+    color: #999999;
+    /* margin-bottom: 28rpx; */
+}
+.rerName text{
+    color: #353535;
+    font-size: 32rpx;
+    font-weight: 500;
+}
+.money{
+    color: #353535;
+    font-size: 38rpx;
+    font-weight: 500;
+    top: 30rpx;
+    right: 30rpx;
+    position: absolute;
+}
